--- a/project/faq.txt
+++ b/project/faq.txt
@@ -16,3 +16,4 @@ Will Lumiera be using guicast (the Cinelerra GUI library) or will it use one of 
 We won't' use Guicast. Lumiera native interface will be written in GTK, although other interfaces will be possible.
 
 // Menu :   child credits
+// Menu :   link:http://urgs.org/ohWeh[]
