--- a/TODO.txt
+++ b/TODO.txt
@@ -17,34 +17,34 @@ For coordination of work:
 == toplevel and general issues ==
 
 
-* *DONE*: developers page: short list taken from credits
-* credits
+* [green]#DONE# developers page: short list taken from credits
+* [green]#DONE# credits
 
-  - get the "credits" up-to date
-  - *DONE*: bring CSS for credits back
-  - maybe update to new table syntax
+  - [green]#DONE# get the "credits" up-to date
+  - [green]#DONE# bring CSS for credits back
+  - maybe update to new table syntax -- [,yellow]#wontfix# (need newer Asciidoc verison)
   
-* polish front page / tweak CSS
+* [green]#DONE# polish front page / tweak CSS
 
-  - *DONE*: link to About Lumiera
+  - [green]#DONE# link to About Lumiera
 
 * all pages:
 
-  - *2nd STEP*: set background colour explicitly
-  - *2nd STEP*: create a footer with important links and contact
+  - [green]#DONE# *2nd STEP*: set background colour explicitly
+  - [green]#DONE# *2nd STEP*: create a footer with important links and contact
 
 == Project menu ==
-* about is fine, just add link to "history corner"
-* screenshots: use a thumbnail
+* about is fine, just add link to "history corner" [green]#DONE#
+* [green]#DONE# screenshots: use a thumbnail
 * donate:
  
-  - *DONE*: move page from old website in
-  - *DONE*: bring it up to date, that is delete the mention of last year's conferences ;-)
+  - [green]#DONE# move page from old website in
+  - [green]#DONE# bring it up to date, that is delete the mention of last year's conferences ;-)
 
 * press:
 
   - some content interesting for press folks. Or at least some interesting links
-  - *DONE*: link to some existing coverage on the press, like the TuxRadio, or the very 
+  - [green]#DONE# link to some existing coverage on the press, like the TuxRadio, or the very 
     old article commenting the project start? http://www.linux.com/archive/feature/126441
 
 
@@ -57,25 +57,27 @@ could go into +documentation/technical/build+
 
 == Download menu ==
 
-* *DONE*: fix broken link
-* *DONE*: better wording
+* [green]#DONE# fix broken link
+* [green]#DONE# better wording
 
 == Contribute page ==
 
-* *DONE*: check content
-* *DONE*: add a paragraph about joining the mailing list and put that paragraph at the top
-* *DONE*: maybe move the "become a developer" to the bottom?
+* [green]#DONE# check content
+* [green]#DONE# add a paragraph about joining the mailing list and put that paragraph at the top
+* [green]#DONE# maybe move the "become a developer" to the bottom?
 * collect all the scattered *Tutorial* pages and move them to documentation/user/tutorials
 
 == Devs vault ==
 
 * *DONE*: index page: shortly describe what it is: collection of resources relevant for active coders
-* *DONE(to fill later)*: as stated above: the active coders get a short entry each on the developers page. later that could be
-  an image or some additional voluntary information, just to give the names a "face"
+* [green]#DONE#(to fill later): as stated above: the active coders get a short entry each on the developers page.
+  later that could be an image or some additional voluntary information, just to give the names a "face"
 * design process: explain the RfC. We've pasted the description from the old design process page
   but we still need to describe how Cehteh's new admin/rfc.script works. Well.. almost self-explanatory
+* [green]#DONE# all RfC entries appear as sub-menu entries now automatically
 * *STARTED*: meeting: short description of the purpose of our monthly meetings
   +
   see http://staging.lumiera.org/Lumiera/MonthlyMeetings.txt and http://staging.lumiera.org/documentation/devel/rfc/MonthlyDeveloperMeetingOnIRC.txt
 
-* *DONE*: meeting protocols: move in: http://staging.lumiera.org/Lumiera/PastMonthlyMeetings.txt
+* [green]#DONE# meeting protocols: move in: http://staging.lumiera.org/Lumiera/PastMonthlyMeetings.txt
+
