--- a/project/news/news.txt
+++ b/project/news/news.txt
@@ -1,19 +1,13 @@
 ////
+!!! THIS FILE WILL BE INCLUDED INTO THE FRONTPAGE !!!
 Please add new items on the top, move older items to old_news.txt
 Comment irrelevant stuff out
 ////
 
-*October 15 2010*::
-	*Quick Autumn news*: Last months the Lumiera community have 
-	been busy preparing for conferences. We have been at http://froscon.org/[FrOSCon 2010]
-	with a booth and a http://programm.froscon.org/2010/events/551.de.html[talk on Lumiera].
-      You might want to watch the http://ftp.stw-bonn.de/froscon/2010/hs12/theora/hs12%5F-%5F2010-08-22%5F10%3A00%5F-%5Fde%5F-%5Flumiera%5F-%5Fhermann%5Fvosseler.ogv[video (in german)] from Ichthyo's presentation.
-	Besides, we have been present at http://www.openvideoconference.org/[OVC] and met the OpenVideo community. +
-	After an intermission caused by other duties, _ichthyo_ is now back working
-	on integration of some recently finished parts into the session. The plan
-	is then to address topics like output / Jack integration or the builder.
-	_cehteh_ is taking a short leave from  
-	Lumiera coding. We can't wait to have him back!
+
+*September 2010*::
+	We have been at http://froscon.org/[FrOSCon 2010]
+	with a booth and a talk on Lumiera. ->link:/project/news/DevReport-10-10.html[more...]
 	
 *July 30 2010*::
 	The link:DevReport-10-07.html[Summer Quarterly News] are out! Read the
