--- a/project/news/news.txt
+++ b/project/news/news.txt
@@ -5,6 +5,12 @@ Comment irrelevant stuff out
 ////
 
 
+*March 2011*::
+      We can now provide link:/debian[binary Debian packages] for the first time,
+      allowing you to _install_ a development preview/snapshot without compiling, on
+      Debian based systems (e.g. Ubuntu). But don't get too excited -- you won't
+      see any new features on the GUI...
+
 *September 2010*::
 	We have been at http://froscon.org/[FrOSCon 2010]
 	with a booth and a talk on Lumiera. ->link:/project/news/DevReport-10-10.html[more...]
@@ -20,24 +26,7 @@ Comment irrelevant stuff out
         on Sunday 21 at 10:00. We hope to see you there!
 
 *April 9 2010*::
-        The link:DevReport-10-04.html[Spring Quarterly News] are out! Read the
-        latest development report.
-
-*January 10 2010*::
-        http://lumiera.org/nobug_manual.html[NoBug]
-        http://unix.freshmeat.net/projects/nobug[version 201001.1] has just
-        been released. This new versions, with lots of improvements (also the
-        support for non-Linux systems) is now a requirement for Lumiera. On the
-        release there are still some pending bugs meant to be shot down in the
-        next few days (just now the testsuite fails). +
-_CALL FOR TESTERS_ - We are looking for people using MacOS, BSD, OpenSolaris or
- any other variant of a Unix-ish OS (Posix systems for Windows, Cygwin, SFU,
- ...) available for a short test session over IRC. Volunteers, install _gcc_,
- _git_, _valgrind_ (if supported) and contact _cehteh_ at #lumiera on Freenode.
-
-*December 26 2009*::
-        The link:DevReport-09-12.html[Winter Quarterly News] are out! Read the
-        last development report.
+        The link:DevReport-10-04.html[Spring Quarterly News] are out!
 
 ////
 .Future
