--- a/project/news/news.txt
+++ b/project/news/news.txt
@@ -4,6 +4,12 @@ Please add new items on the top, move older items to old_news.txt
 Comment irrelevant stuff out
 ////
 
+*August 2014*::
+      Benny has compiled a small
+      link:/project/news/DevReport-14-08.html[2014 Summer News Report] --
+      As usual, Lumiera team will meet again at the FrOSCon conference
+      at Bonn/St.Augustin (Germany)
+
 *May 2014*::
       the Lumiera core developers will visit the
       http://lac.linuxaudio.org/2014[LAC Linux Audio Conference] in Karlsruhe/Germany.
