--- a/project/news/news.txt
+++ b/project/news/news.txt
@@ -4,6 +4,12 @@ Please add new items on the top, move older items to old_news.txt
 Comment irrelevant stuff out
 ////
 
+*May 2015*::
+      The existing Lumiera user interface has been switched to GTK-3. +
+      Besides some clean-up, this prompted more activities in
+      the area of GUI and workflow recently. Read more in the
+      link:/project/news/DevReport-15-05.html[2014/15 Spring Coding News...]
+
 *August 2014*::
       Benny has compiled a small
       link:/project/news/DevReport-14-08.html[2014 Summer News Report] --
