--- a/project/news/news.txt
+++ b/project/news/news.txt
@@ -3,6 +3,14 @@
 Please add new items on the top, move older items to old_news.txt
 Comment irrelevant stuff out
 ////
+*November 2015*::
+      We published the next »preview release« `0.pre.03` +
+      We did a lot of library and platform upgrades recently, which need to be
+      reflected within package definitions and buildsystem. This ``release'' is
+      relevant for developers only; we still have no user visible changes yet.
+      As usual, we upgraded our Debian packaging and rebuilt the package
+      on various distributions, to spot build problems
+      and verify compatibility...
 
 *August 2015*::
       The reference platform for Lumiera has been upgraded to Debian/Jessie.
