--- a/project/news/news.txt
+++ b/project/news/news.txt
@@ -4,6 +4,13 @@ Please add new items on the top, move older items to old_news.txt
 Comment irrelevant stuff out
 
 ////
+*September 2018*::
+      Our annual report on the progress of Lumiera lists a number of elements
+      contributing to project increment and the general status of the project.
+      Should you have any questions do not hesitate to contact us on the usual
+      channels lumiera@lists.lumiera.org.
+      link:/project/news/DevReport-18-09.html[2018 Development Report]...
+
 *November 2016*::
       While there’s been a long pause since our last news report,
       a lot of coding activity happened ``behind the scenes''.
